# engram

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  plan.md  plan1.md  pyproject.toml  requirements.txt
.antigravity/: instructions.md
.cursor/rules/: engram.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
antigravity-skills/: engram-adaptive-workflow.md  engram-committee-workflow.md
benchmarks/: BENCHMARKS.md  __init__.py  engram_retrieval_bench.py  fit_ranking.py  grading.py  inject_noise.py  ladder_cost.py  longmemeval_bench.py  results_baseline.json  results_longmemeval_oracle.json  test_queries.json
benchmarks/fit/: REPORT.md  candidate_weights.json  fit.json  phase0.json  results.jsonl
claude-skills/engram-memory/: SKILL.md
cursor-hooks/: engram-auto-suggest.js  hooks.json  session-capture.js
cursor-rules/: engram-adaptive.mdc  engram-committee.mdc  engram-orchestrator.mdc  engram.mdc
docs/: AUDIT_2026-07-17.md  COMMANDS.md  COMPARATIVE_REVIEW_2026-07.md  GUIDE.md  MEASURING_FIT_AND_HELP.md  RAGE_AUDIT.md
docs/decisions/: 0001-storage-backend.md  0002-embedding-dimension-lock.md  0003-committee-workflow.md  0004-mcp-tool-taxonomy.md  0005-extraction-policy.md  0006-action-ladder.md  0007-inbox-and-monitors.md  0008-skill-validation.md
evals/: README.md  RESULTS.md  public_queries.json  real_queries.json  real_queries.json.example
scripts/: engram.sh  gen_docs.py  install.sh  setup.sh  validate_eval_labels.py
src/: __init__.py  auto_extract.py  backup.py  benchmark.py  browse.py  capture.py  checkpoint.py  chunk_sync.py  cli.py  cli_legacy.py  codebase_query.py  compression.py  config.py  database.py  doctor.py  embeddings.py  export.py  feedback.py  graph.py  hooks.py  inbox.py  item_registry.py  label_mining.py  llm.py  maintenance.py  mcp_server.py  memory_ops.py  merge.py  migrations.py  prompt_security.py  query_analyzer.py  ranking.py  ranking_weights.py  reflex.py  relations.py  router.py  search.py  search_audit.py  seed.py  session_review.py  (+7 more)
src/cli/: __init__.py  fmt.py  main.py
src/cli/commands/: bootstrap.py  brain.py  chunk_sync.py  codebase.py  inbox.py  llm.py  maintenance.py  memory.py  reflex.py  session.py  sync.py  tools.py  validate.py
src/mcp/: __init__.py  constants.py  handlers.py  protocol.py  tools_schema.py
tests/: conftest.py  simulate_token_consumption.py  test_antigravity_global.py  test_benchmark_grading.py  test_bitemporal_relations.py  test_capture.py  test_checkpoint.py  test_chunk_sync.py  test_cli_commands.py  test_codebase_query.py  test_cov_auto_extract.py  test_cov_benchmark.py  test_cov_brain.py  test_cov_cli_bootstrap.py  test_cov_cli_codebase.py  test_cov_cli_main.py  test_cov_cli_maintenance.py  test_cov_cli_memory.py  test_cov_cli_sync.py  test_cov_cli_tools.py  test_cov_core_a.py  test_cov_core_b.py  test_cov_core_c.py  test_cov_database2.py  test_cov_doctor.py  test_cov_embeddings.py  test_cov_export.py  test_cov_graph.py  test_cov_handlers2.py  test_cov_hooks.py  test_cov_inbox2.py  test_cov_llm.py  test_cov_maintenance.py  test_cov_protocol.py  test_cov_reflex2.py  test_cov_relations.py  test_cov_roi.py  test_cov_scheduler.py  test_cov_selfcheck_integrity.py  test_cov_session.py  (+30 more)
tools/: README.md  benchmark_results.json  token_benchmark.py
