[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-memory"
version = "0.1.0"
description = "A fast, local, FTS5-powered engineering memory for LLM-assisted development"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Luis Miguel Cota" }
]
dependencies = [
    "sqlite-vec>=0.1.9",
    "sqlean-py>=3.45.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pyright==1.1.411",
    "ruff>=0.3.0",
    "pre-commit>=3.7.0"
]

[project.scripts]
engram = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
include = [
    "src/config.py",
    "src/embeddings.py",
    "src/database.py",
    "src/search.py",
    "src/summarize.py",
    "src/version.py",
    "src/mcp",
    "src/cli",
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
skip_empty = true
show_missing = true
fail_under = 60

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
