[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-memory"
version = "0.1.0"
description = "A fast, local, FTS5-powered engineering memory for LLM-assisted development"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Luis Miguel Cota" }
]
dependencies = [
    "sqlite-vec>=0.1.9",
    "sqlean-py>=3.45.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pyright==1.1.411",
    "ruff>=0.3.0",
    "pre-commit>=3.7.0"
]

[project.scripts]
engram = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
include = [
    "src/config.py",
    "src/embeddings.py",
    "src/database.py",
    "src/search.py",
    "src/summarize.py",
    "src/version.py",
    "src/mcp",
    "src/cli",
]

[tool.coverage.run]
branch = true
source = ["src"]
# The gate measures the *library core*, not the CLI shell. We omit code that
# is exercised by hand or end-to-end, not by unit tests, and would otherwise
# drag the number down without reflecting core quality:
#   - cli/**        argparse dispatch + print formatting (run via `engram ...`)
#   - browse.py     curses TUI (interactive; not unit-testable)
#   - token_simulation.py / benchmark.py   measurement tooling, run manually
# Everything else — search, ranking, reflex, router, validation, database,
# maintenance, and the agent-facing MCP handlers — stays in scope and IS tested.
omit = [
    "src/cli/*",
    "src/cli/commands/*",
    "src/mcp_server.py",
    "src/browse.py",
    "src/token_simulation.py",
    "src/benchmark.py",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
# Honest ratchet floor for the library core (currently ~60%). Set a few points
# below the real number so normal cross-version variance doesn't flake CI, but
# high enough to catch a genuine coverage regression. Raise as coverage grows.
fail_under = 55

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
