[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-memory"
version = "0.1.0"
description = "A fast, local, FTS5-powered engineering memory for LLM-assisted development"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Luis Miguel Cota" }
]
dependencies = [
    "sqlite-vec>=0.1.9",
    "sqlean-py>=3.45.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pyright==1.1.411",
    "ruff>=0.3.0",
    "pre-commit>=3.7.0"
]

[project.scripts]
engram = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
include = [
    "src/config.py",
    "src/embeddings.py",
    "src/database.py",
    "src/search.py",
    "src/summarize.py",
    "src/version.py",
    "src/mcp",
    "src/cli",
]

[tool.coverage.run]
branch = true
source = ["src"]
# We omit only code that genuinely cannot be exercised by unit tests. Every
# other module — the whole CLI shell, MCP handlers, maintenance, export, graph,
# doctor, embeddings, the library core — is in scope and tested.
#   - browse.py         curses TUI: an interactive keypress loop, not unit-testable
#   - cli/__main__.py   `python -m` runpy shim (one-line entry, no logic)
omit = [
    "src/browse.py",
    "src/cli/__main__.py",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
# Honest ratchet floor. Real coverage of the in-scope code is ~97%; the gate
# sits a few points below so normal cross-version variance (3.9–3.12 conditional
# imports/branches) doesn't flake CI, while still catching a real regression.
fail_under = 92

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
